# birdie

./: Cargo.toml  README.md
examples/: account_balances.rs  klines.rs  user_data_stream.rs
src/: enums.rs  errors.rs  filters.rs  fix.rs  fix_api.rs  lib.rs  models.rs  rest.rs  web_socket.rs
src/account/: account_information.rs  account_trade_list.rs  mod.rs  query_allocations.rs  query_prevented_matches.rs  query_unfilled_order_count.rs
src/enums/: futures.rs  mod.rs
src/filters/: futures.rs  mod.rs
src/general/: check_server_time.rs  mod.rs
src/margin/: mod.rs
src/margin/account/: adjust_cross_margin_max_leverage.rs  disable_isolated_margin_account.rs  enable_isolated_margin_account.rs  get_bnb_burn_status.rs  get_summary_of_margin_account.rs  mod.rs  query_cross_isolated_margin_capital_flow.rs  query_cross_margin_account_details.rs  (+5 more)
src/market/: kline_data.rs  mod.rs  old_trade_lookup.rs  order_book.rs  recent_trades_list.rs  rolling_window_price_change.rs  symbol_order_book_ticker.rs  ui_klines.rs
src/rest/: mod.rs
src/rest_api/: mod.rs
src/spot/: mod.rs  web_socket_streams.rs
src/trade/: all_orders.rs  cancel_all_open_orders.rs  cancel_order.rs  cancel_order_list.rs  cancel_replace_order.rs  mod.rs  new_order.rs  new_order_list_oco.rs  new_order_list_oto.rs  new_order_list_otoco.rs  new_order_using_sor.rs  query_all_order_lists.rs  query_open_order_lists.rs  query_order.rs  query_order_lists.rs  test_new_order.rs  test_new_order_using_sor.rs
src/usd_futures/: mod.rs
src/web_socket/: mod.rs
src/web_socket_api/: auth.rs  mod.rs
src/web_socket_stream/: mod.rs  trade.rs
tests/: account_test.rs  general_test.rs  general_web_socket_api_test.rs  market_test.rs  rest_account_test.rs  rest_general_test.rs  rest_margin_account_test.rs  rest_margin_borrow_and_repay_test.rs  rest_margin_market_test.rs  rest_margin_trade_test.rs  rest_margin_transfer_test.rs  rest_market_test.rs  rest_trade_test.rs  ws_account_test.rs  ws_general_test.rs  ws_market_test.rs  ws_trade_test.rs
tests/common/: mod.rs
(+221 files in other folders)
