[package]
name = "birdie"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = { version = "1.7", default-features = false }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
serde_repr = "0.1"
thiserror = { version = "1.0", default-features = false }
url = { version = "2.5", default-features = false }
