[package]
name = "birdie"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = { version = "1.7", default-features = false }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
serde_repr = "0.1"
sha2 = "0.10"
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.40", default-features = false, features = ["macros", "rt-multi-thread"] }
url = { version = "2.5", default-features = false }
